# ta3

./: AssignArrayStmt.h  AssignDefStmt.h  AssignStmt.h  CMakeLists.txt  CMakeLists1.txt  CellTypes.h  Environment.cpp  Environment.h  ExprStmt.h  Expression.h  FunctionCallStmt.h  FunctionDef.h  IfStmt.h  LoopStmt.h  Makefile  PrintStmt.h  README.md  Robot.cpp  Robot.h  RobotCommandStmt.h  Statement.cpp  Statement.h  Value.cpp  Value.h  algos3.txt  anonFunc.txt  eval.cpp  eval.h  globals.h  interpreter.cpp  interpreter.h  lex.yy.c  lexer.cpp  lexer.l  main.cpp  map5-5.txt  map5-7.txt  map7-10.txt  parser.output  parser.tab.cpp  (+2 more)
Old/: lexer.l  parser.y  var67  var67.txt  хабр.txt
tests/: algorithm.txt  algoritm.txt  anonFunc.txt  arLogSet.txt  factorial.txt  fibonacci.txt  fullvar.txt  ifFrom.txt  innerfunc.txt  length.txt  map.txt  map1.txt  map10-15.txt  map10-20.txt  robot.txt  scope.txt  typeconv.txt
